--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1629,13 +1629,13 @@ body {
 }
 
 .player-name-input {
-  flex: 0 0 auto;
-  min-width: 50px;
-  max-width: 400px;
+  flex: 0 0 180px;
+  width: 180px !important;
+  min-width: 180px;
+  max-width: 180px;
   padding: 0.25rem 0.4rem;
   font-size: 0.9rem;
   height: 32px;
-  width: auto !important;
 }
 
 .player-number-input {
@@ -1986,9 +1986,10 @@ body {
   }
   
   .player-name-input {
-    min-width: 40px;
-    max-width: 350px;
-    flex: 0 0 auto;
+    flex: 0 0 150px;
+    width: 150px !important;
+    min-width: 150px;
+    max-width: 150px;
   }
   
   .player-number-input {
@@ -2065,9 +2066,10 @@ body {
   }
   
   .player-name-input {
-    flex: 0 0 auto;
-    min-width: 35px;
-    max-width: 300px;
+    flex: 0 0 120px;
+    width: 120px !important;
+    min-width: 120px;
+    max-width: 120px;
   }
   
   .player-number-input {
